fix rounded corners and row spacing

--- a/frontend/src/components/IconAndCurrencyIdCell.module.scss
+++ b/frontend/src/components/IconAndCurrencyIdCell.module.scss
@@ -12,6 +12,7 @@
 
 .iconRoot > div > span:nth-child(1) {
   color: $grey5;
+  font-size: smaller;
 }
 
 .iconRoot > div > span:nth-child(2) {
